// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StackCards creates correct snapshot for an array of notebooks 1`] = `
<withStyles(GridWrapper)
  container={true}
>
  <withStyles(GridWrapper)
    item={true}
    lg={4}
    md={4}
    sm={6}
    xl={2}
    xs={12}
  >
    <withStyles(StackCard)
      deletePermission="delete"
      deleteStack={[Function]}
      openPermission="open"
      openStack={[Function]}
      stack={
        Object {
          "displayName": "name1",
          "id": "1",
          "type": "type1",
        }
      }
      typeName="expectedTypeName"
      userPermissions={
        Array [
          "open",
          "delete",
          "create",
        ]
      }
    />
  </withStyles(GridWrapper)>
  <withStyles(GridWrapper)
    item={true}
    lg={4}
    md={4}
    sm={6}
    xl={2}
    xs={12}
  >
    <withStyles(StackCard)
      deletePermission="delete"
      deleteStack={[Function]}
      openPermission="open"
      openStack={[Function]}
      stack={
        Object {
          "displayName": "name2",
          "id": "2",
          "type": "type2",
        }
      }
      typeName="expectedTypeName"
      userPermissions={
        Array [
          "open",
          "delete",
          "create",
        ]
      }
    />
  </withStyles(GridWrapper)>
  <withStyles(GridWrapper)
    item={true}
    lg={4}
    md={4}
    sm={6}
    xl={2}
    xs={12}
  >
    <withStyles(StackCard)
      deletePermission="delete"
      deleteStack={[Function]}
      openPermission="open"
      openStack={[Function]}
      stack={
        Object {
          "displayName": "name3",
          "id": "3",
          "type": "type3",
        }
      }
      typeName="expectedTypeName"
      userPermissions={
        Array [
          "open",
          "delete",
          "create",
        ]
      }
    />
  </withStyles(GridWrapper)>
  <ComponentWrapper
    permission="create"
    style={
      Object {
        "width": "100%",
      }
    }
    userPermissions={
      Array [
        "open",
        "delete",
        "create",
      ]
    }
  >
    <withStyles(GridWrapper)
      item={true}
      lg={4}
      md={4}
      sm={6}
      xl={2}
      xs={12}
    >
      <withStyles(NewStackButton)
        onClick={[Function]}
        typeName="expectedTypeName"
      />
    </withStyles(GridWrapper)>
  </ComponentWrapper>
</withStyles(GridWrapper)>
`;

exports[`StackCards creates correct snapshot for an empty array 1`] = `
<withStyles(GridWrapper)
  container={true}
>
  <ComponentWrapper
    permission="create"
    style={
      Object {
        "width": "100%",
      }
    }
    userPermissions={
      Array [
        "open",
        "delete",
        "create",
      ]
    }
  >
    <withStyles(GridWrapper)
      item={true}
      lg={4}
      md={4}
      sm={6}
      xl={2}
      xs={12}
    >
      <withStyles(NewStackButton)
        onClick={[Function]}
        typeName="expectedTypeName"
      />
    </withStyles(GridWrapper)>
  </ComponentWrapper>
</withStyles(GridWrapper)>
`;
